# mlipview

./: .gitignore  .prettierignore  .prettierrc.json  QUEST_DEBUG_CONSOLE.md  README.md  VR_SETUP_README.md  babel.config.cjs  backend_design.md  bond_update.md  current_design.md  design.md  fairchem_server2_frontend.md  fixes.md  frontend_design.md  generate-certs.sh  graph_update.md  jest.config.js  jest.integration.config.js  json_library.md  new_design.md  nginx_routing.conf  package-lock.json  package.json  playwright.config.js  playwright.react.manual.config.js  protobuf_migration.md  pyproject.toml  pytest.ini  react_typescript_migration.md  server-app.js  server.js  state_system_update.md  state_system_update2.md  test_hooks.md  testing.md  tests_summary.md  timeline.md  tsconfig.json  vite.config.js  vite.proto.config.js
examples/: README.md  test_water.py
fairchem_local_server/: __init__.py  api.py  atoms_cache.py  atoms_utils.py  batched_predict.py  http_calculator.py  model_runtime.py  models.py  relax_water_http.py  requirements-test.txt  run_dual_server.sh  serve_app.py  server.py  services.py  stress_tool.py  test.py  test_js_relax_parity.py  test_relax_api.py  test_water.py  test_water_server.py  uma_http_calculator.py  water_fairchem_bfgs_trace.json
fairchem_local_server2/: README.md  __init__.py  atoms_utils.py  log.py  model_runtime.py  pb_adapter.py  serve_ws_app.py  services.py  session.proto  session_models.py  session_pb2.py  stress_tool_v2.py  worker_pool.py  ws_app.py
mlipviewer2/: babel.config.cjs  jest.config.js  package-lock.json  server.js  (+1 more)
(+642 files in other folders)
