[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlipview-env"
version = "0.1.0"
description = "Dependencies for running the mlipview UMA backend/tests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fairchem-core>=2.7",
  "ray[serve]>=2.49",
  "fastapi>=0.118",
  "uvicorn[standard]>=0.37",
  "websockets>=15.0",
  "numpy>=2.2",
  "torch>=2.6",
  "pydantic>=2.11",
  "pytest>=8.4",
  "pytest-asyncio>=1.2",
]
